thumbnailer sample build failure on macos

Broke !4901 (merged)

  CC       libvlc/thumbnailer.o
/Users/videolanci/builds/x7XUHK5B/0/alexandre-janniaux/vlc/extras/package/macosx/../../../doc/libvlc/thumbnailer.c:36:1: error: static_assert failed due to requirement '(-1) >= 0' "Clock selection unavailable!"
static_assert (_POSIX_CLOCK_SELECTION >= 0, "Clock selection unavailable!");
^              ~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/assert.h:113:23: note: expanded from macro 'static_assert'
#define static_assert _Static_assert
                      ^
/Users/videolanci/builds/x7XUHK5B/0/alexandre-janniaux/vlc/extras/package/macosx/../../../doc/libvlc/thumbnailer.c:110:24: error: redefinition of 'wait' as different kind of symbol
static pthread_cond_t  wait;
                       ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/sys/wait.h:248:9: note: previous definition is here
pid_t   wait(int *) __DARWIN_ALIAS_C(wait);
        ^
/Users/videolanci/builds/x7XUHK5B/0/alexandre-janniaux/vlc/extras/package/macosx/../../../doc/libvlc/thumbnailer.c:123:29: error: incompatible pointer types passing 'pid_t (*)(int *)' (aka 'int (*)(int *)') to parameter of type 'pthread_cond_t * _Nonnull' (aka 'struct _opaque_pthread_cond_t *') [-Werror,-Wincompatible-pointer-types]
        pthread_cond_signal(&wait);
                            ^~~~~
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/pthread.h:302:41: note: passing argument to parameter here
int pthread_cond_signal(pthread_cond_t *);
                                        ^
/Users/videolanci/builds/x7XUHK5B/0/alexandre-janniaux/vlc/extras/package/macosx/../../../doc/libvlc/thumbnailer.c:152:27: error: incompatible pointer types passing 'pid_t (*)(int *)' (aka 'int (*)(int *)') to parameter of type 'pthread_cond_t *' (aka 'struct _opaque_pthread_cond_t *') [-Werror,-Wincompatible-pointer-types]
        pthread_cond_wait(&wait, &lock);
                          ^~~~~
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/pthread.h:311:50: note: passing argument to parameter here
int pthread_cond_wait(pthread_cond_t * __restrict,
                                                 ^
/Users/videolanci/builds/x7XUHK5B/0/alexandre-janniaux/vlc/extras/package/macosx/../../../doc/libvlc/thumbnailer.c:185:23: error: incompatible pointer types passing 'pid_t (*)(int *)' (aka 'int (*)(int *)') to parameter of type 'pthread_cond_t *' (aka 'struct _opaque_pthread_cond_t *') [-Werror,-Wincompatible-pointer-types]
    pthread_cond_init(&wait, NULL);
                      ^~~~~
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/pthread.h:297:30: note: passing argument to parameter here
                pthread_cond_t * __restrict,
                                           ^
/Users/videolanci/builds/x7XUHK5B/0/alexandre-janniaux/vlc/extras/package/macosx/../../../doc/libvlc/thumbnailer.c:207:26: error: incompatible pointer types passing 'pid_t (*)(int *)' (aka 'int (*)(int *)') to parameter of type 'pthread_cond_t * _Nonnull' (aka 'struct _opaque_pthread_cond_t *') [-Werror,-Wincompatible-pointer-types]
    pthread_cond_destroy(&wait);
                         ^~~~~
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/pthread.h:293:42: note: passing argument to parameter here
int pthread_cond_destroy(pthread_cond_t *);
                                         ^
6 errors generated.
make[3]: *** [libvlc/thumbnailer.o] Error 1
make[2]: *** [check-am] Error 2
make[1]: *** [check-recursive] Error 1
make: *** [check] Error 2