doc: thumbnailer: remove _POSIX_CLOCK_SELECTION

Since e56d9673346fc5ae325bfdc7b665817e655eadf5, there is no
clock_gettime() call amd there is no need for this POSIX feature to be
enabled.

Refs #28519